chore: Update syllabus.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Class Name - Year
-description: Welcome to Class Name - Year
+title: Intro to Unity
+description: Learning the basics of Unity is not easy! We are going to see how far we can get with only 24 classes.
 theme: just-the-docs
 
 url: https://jcollard.github.io/repo-name
